# LLM-Finetuning-for-Specific-Code-Generation

./: .gitignore  Finetune_Llama_3_2.ipynb  README.md  dataset_llama.json  pyproject.toml  regex_applier.py  requirements.txt  retrieve_model_output.py
build_checker/: README.md  pyproject.toml
build_checker/build_checker/: __main__.py  api.py  config_manager.py  dataset_processor.py  main.py  server.py  single_snippet_ui.py
build_checker/build_checker/log/: logger.py
build_checker/build_checker/res/: debug_conversations.json
build_checker/build_checker/res/config/: gui_config.json
build_checker/res/akka_placeholder/: build.sbt
build_checker/res/akka_placeholder/src/main/scala/: Main.scala
build_checker/res/config/: failing_snippets.json  processed_hashes.json
dataset_builder/: README.md  pyproject.toml
dataset_builder/data/: dataset_llama.json  new_data.json  test_set.json
dataset_builder/data/synthetic_data/: dataset_llama.json  dataset_llama_BACKUP.json
dataset_builder/dataset_builder/: main.py
dataset_builder/src/: main.py
llama3_rag/: README.md  pyproject.toml  requirements.txt
llama3_rag/data/rag_results/: rag_evaluation_20241205.json
llama3_rag/src/: main.py
llama_finetune/: README.md  baseline_metrics.json  baseline_results.csv  finetuned_metrics.json  finetuned_results.csv  pyproject.toml  results.adoc  results.html
llama_finetune/data/results/: evaluation_results_after_finetuning_20241203_175733.json  evaluation_results_after_finetuning_20241203_182243.json  evaluation_results_before_finetuning_20241203_175046.json  evaluation_results_before_finetuning_20241203_181629.json
llama_finetune/llama_finetune/: build_client.py  config.py  evaluate.py  logger.py  train.py
llama_finetune/llama_finetune/evaluation_utils/: analyze_models.py  code_generator.py  data_processor.py  metrics_calculator.py
llama_finetune/llama_finetune/training/: config.py  dataset_utils.py  grid_search.py  model_loader.py  plotting_utils.py  smac_optimizer.py  trainer_setup.py  training_utils.py
llama_finetune/llama_finetune/utils/: trim_dataset.py
llama_finetune/outputs/checkpoint-60/: adapter_config.json  rng_state.pth  trainer_state.json
llama_finetune/res/data/: dataset_llama.json  dataset_llama_size265.json  dataset_llama_size275.json  hard_test_set.json
llama_finetune/res/data/trained_models/: trained_models.json
llama_finetune/res/report/: results.adoc  results.html
llama_finetune/scripts/: plot_metrics.py
llama_finetune/src/: evaluate.py  logger.py  train.py
llama_finetune/test/: conftest.py  test_build_checker_client.py  test_evaluation.py  test_metrics_calculator.py
llama_prompt_engineering/: main.py  pyproject.toml
llama_prompt_engineering/res/: evaluation_results.json
llama_prompt_engineering/src/: helpers.py  main.py  prompt_evaluator.py
llama_prompt_engineering/test/: test_main.py
ollama_prompt_engineering/: README.md
ollama_prompt_engineering/res/: evaluation_results.json  test_set.json
ollama_prompt_engineering/src/: evaluation_results_llama3.2.json  evaluation_results_qwen2.5.json  main.py  pe_report_llama3.2.md  pe_report_qwen2.5.md  pe_results_llama3.2.json  pe_results_qwen2.5.json  prompt_evaluator.py  simple_evaluator.py
ollama_prompt_engineering/test/: test_prompt_evaluator.py  test_save_evaluation_results.py
qwen_notebooks/: qwen2.5_7b_generated_responses_20250214_162711.json  qwen2_5__7b_alpaca.ipynb
res/data/generated_code/loaded_finetuned_trainsize43/: code_1.txt  code_10.txt  code_11.txt  code_12.txt  code_13.txt  code_14.txt  code_15.txt  code_16.txt  code_17.txt  code_2.txt  code_3.txt  code_4.txt  code_5.txt  code_6.txt  code_7.txt  code_8.txt  code_9.txt  prompt_1.txt  prompt_10.txt  prompt_11.txt  prompt_12.txt  prompt_13.txt  (+12 more)
unsloth_tests/: base_model_generated_responses_20250217_112225.json  qwen2.5_7b_generated_responses_20250214_104250.json  qwen2_5_(7b)_alpaca.py  qwen2_5__7b_alpaca.ipynb  qwen2_5__7b_alpaca.py  qwen_HARD_TEST_generated_responses_20250217_172508.json
