[tool.poetry]
name = "llama-finetune"
version = "0.1.0"
description = ""
authors = ["Lorenzo Massone <lorenzomassone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
build-checker = { path = "./build_checker", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
