[tool.poetry]
name = "llama-finetune"
version = "0.1.0"
description = ""
authors = ["Lorenzo Massone <lorenzomassone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
build-checker = { path = "./build_checker", develop = true }
smac3 = "^2.0.2"
configspace = "^1.2.1"
pyrfr = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
