[tool.poetry]
name = "dataset-builder"
version = "0.1.0"
description = ""
authors = ["massone99 <lorenzo.studio@studio.unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dataset_builder = "dataset_builder.main:main"