[tool.poetry]
name = "llama3-rag"
version = "0.1.0"
description = ""
authors = ["massone99 <lorenzo.studio@studio.unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.9"
langchain-core = "^0.3.21"
langchain-community = "^0.3.9"
ollama = "^0.4.2"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.23"
gradio = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
