[tool.poetry]
name = "llama-finetune"
version = "0.1.0"
description = "Fine-tuning Llama 3.2 model for code generation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
datasets = "^3.1.0"
unsloth = "^2024.11.11"
nltk = "^3.9.1"
codebleu = "^0.7.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
