[tool.poetry]
name = "llama-prompt-engineering"
version = "0.1.0"
description = ""
authors = ["Lorenzo Massone <lorenzomassone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
